0.1.20: - Collect ships from Hangar & "Update" ships (ultimately, it will be only from Hangar - Add report functionnality that can send the missing ships that are not detected yet - Fix text too dark in card details on Roadmap - Prevent Application to load when cache is done ready yet. You'll see a WAIT message in the application icon. Please wait few sec.

--- a/css/default.css
+++ b/css/default.css
@@ -36,7 +36,7 @@
 	
 }
 .text-secondary {
-	
+	color: #9ca5ad !important;
 }
 .text-light{
 	/*color: #979c9f !important;*/
